--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 
 <h1>Hello world!</h1>
+<h3>Here should be a beautiful image</h3>
 <p>This is the first file in my new Git Repo.</p>
 <p> A new line in our file!</p>
 </body>
