--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <h3>Here should be a beautiful image</h3>
 <p>This is the first file in my new Git Repo.</p>
 <p> A new line in our file!</p>
+<h3>Here should be another beautiful image</h3>
 </body>
 </html>
