--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <p>This is the first file in my new Git Repo.</p>
 <p>This line is here to show how merging works.</p>
 <p> A new line in our file!</p>
-<h3>Here should be another beautiful image</h3>
+<h3>Here should be another gorgeous image</h3>
 </body>
 </html>
 
