--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <p>This line is here to show how merging works.</p>
 <p> A new line in our file!</p>
 <h3>Here should be another gorgeous image</h3>
+<p>Like a boss!</p>
 </body>
 </html>
 
